# docaroo-rs

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
examples/: README.md  error_handling.rs  likelihood.rs  pricing.rs
src/: client.rs  error.rs  lib.rs  models.rs  pricing.rs  procedures.rs
tests/: integration_test.rs
